<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context=".layout.RegisterActivity">

    <LinearLayout
        style="@style/Linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/app_name_text"
            style="@style/Title"
            android:layout_marginTop="80dp"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/register"
            style="@style/Text"
            android:text="@string/register_sub_text" />

        <TextView
            android:id="@+id/register_warrning_text"
            style="@style/Warning_Text"
            android:layout_marginTop="60dp"
            android:text="@string/register_error_text" />

        <TextView
            android:id="@+id/register_username_text"
            style="@style/Text"
            android:layout_marginTop="20dp"
            android:text="@string/login_username_text"
            android:labelFor="@id/register_username" />

        <EditText
            android:id="@+id/register_username"
            style="@style/Input_Text"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/register_password_text"
            style="@style/Text"
            android:layout_marginTop="5dp"
            android:text="@string/login_password_text"
            android:labelFor="@id/register_password" />

        <EditText
            android:id="@+id/register_password"
            style="@style/Input_Password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/register_button"
            style="@style/Button"
            android:layout_marginTop="30dp"
            android:onClick="register"
            android:text="@string/register_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>