<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context=".layout.EditPasswordActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/Linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/password_name_text"
            style="@style/Title"
            android:layout_marginTop="80dp"
            android:text="@string/password_name_text" />

        <TextView
            android:id="@+id/password_warning_text"
            style="@style/Warning_Text"
            android:layout_marginTop="40dp"
            android:text="@string/error_text" />

        <TextView
            android:id="@+id/password_current_password_text"
            style="@style/Text"
            android:layout_marginTop="40dp"
            android:labelFor="@id/password_current_password"
            android:text="@string/password_current_password_text" />

        <EditText
            android:id="@+id/password_current_password"
            style="@style/Input_Password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/password_new_password_text"
            style="@style/Text"
            android:layout_marginTop="5dp"
            android:labelFor="@id/password_new_password"
            android:text="@string/password_new_password_text" />

        <EditText
            android:id="@+id/password_new_password"
            style="@style/Input_Password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/password_change_button"
            style="@style/Button"
            android:layout_marginTop="55dp"
            android:onClick="change"
            android:text="@string/password_change_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>