<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context=".GoalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Linear_layout">

        <TextView
            android:id="@+id/goal_name_text"
            android:layout_marginTop="50dp"

            android:text="@string/goal_name"
            style="@style/Title"/>

        <TextView
            android:id="@+id/goal_day_text"
            android:layout_marginTop="20dp"

            android:text="@string/date"
            style="@style/Macros"/>

        <Spinner
            android:id="@+id/goal_day_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="0dp"
            android:layout_marginStart="25dp" />

        <TextView
            android:id="@+id/goal_calories_text"
            android:layout_marginTop="20dp"

            android:text="@string/calories"
            style="@style/Macros"/>

        <EditText
            android:id="@+id/goal_calories"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"

            android:ems="10"
            android:inputType="number"
            android:importantForAutofill="no"

            android:hint="@string/default_value"
            style="@style/Input_Text"/>

        <TextView
            android:id="@+id/goal_proteins_text"
            android:layout_marginTop="10dp"

            android:text="@string/proteins"
            style="@style/Macros"/>

        <EditText
            android:id="@+id/goal_proteins"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"

            android:ems="10"
            android:inputType="number"
            android:importantForAutofill="no"

            android:hint="@string/default_value"
            style="@style/Input_Text"/>

        <TextView
            android:id="@+id/goal_carbons_text"
            android:layout_marginTop="10dp"

            android:text="@string/carbon"
            style="@style/Macros"/>

        <EditText
            android:id="@+id/goal_carbons"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"

            android:ems="10"
            android:inputType="number"
            android:importantForAutofill="no"

            android:hint="@string/default_value"
            style="@style/Input_Text"/>

        <TextView
            android:id="@+id/goal_fats_text"
            android:layout_marginTop="10dp"

            android:text="@string/fat"
            style="@style/Macros"/>

        <EditText
            android:id="@+id/goal_fats"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"

            android:ems="10"
            android:inputType="number"
            android:importantForAutofill="no"

            android:hint="@string/default_value"
            style="@style/Input_Text"/>

        <TextView
            android:id="@+id/goal_fluids_text"
            android:layout_marginTop="10dp"

            android:text="@string/fluids"
            style="@style/Macros"/>

        <EditText
            android:id="@+id/goal_fluids"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"

            android:ems="10"
            android:inputType="number"
            android:importantForAutofill="no"

            android:hint="@string/default_value"
            style="@style/Input_Text"/>

        <Button
            android:id="@+id/add_goal_button"
            android:layout_marginTop="30dp"
            android:onClick="addGoal"
            android:text="@string/add_goal_button"
            style="@style/Button"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>