<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context=".MenuActivity">

    <LinearLayout
        style="@style/Linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/app_name_text"
            style="@style/Title"
            android:layout_marginTop="80dp"
            android:text="@string/app_name" />

        <Button
            android:id="@+id/menu_add_meal_button"
            style="@style/Button"
            android:layout_marginTop="80dp"
            android:onClick="addMeal"
            android:text="@string/menu_add_meal_button" />

        <Button
            android:id="@+id/menu_statistics_button"
            style="@style/Button"
            android:layout_marginTop="30dp"
            android:onClick="showStatistics"
            android:text="@string/menu_statistics_button" />

        <Button
            android:id="@+id/menu_options_button"
            style="@style/Button"
            android:layout_marginTop="30dp"
            android:onClick="openOptions"
            android:text="@string/menu_options_button" />

        <Button
            android:id="@+id/test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button"
            android:onClick="test"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>