<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context=".layout.ChangeMealActivity">

    <LinearLayout
        style="@style/Linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/change_meal_name_text"
        style="@style/Text"
        android:layout_marginTop="50dp"
        android:text="@string/meal_name_text"/>

    <TextView
        android:id="@+id/change_meal_name"
        style="@style/Text"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/change_meal_info"
        style="@style/Macros"
        android:layout_marginTop="10dp"
        android:text="@string/meal_info_text" />

    <LinearLayout
        style="@style/Linear_layout"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="-5dp"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/Linear_layout">

                <TextView
                    android:id="@+id/change_meal_calories_text"
                    style="@style/Text"
                    android:text="@string/calories" />

                <EditText
                    android:id="@+id/change_meal_calories"
                    style="@style/Input_Number"
                    android:layout_width="100dp"

                    android:layout_marginTop="-10dp"
                    android:hint="@string/default_value"
                    android:autofillHints="" />
            </LinearLayout>

            <LinearLayout
                style="@style/Linear_layout"
                android:layout_marginStart="35dp">

                <TextView
                    android:id="@+id/change_meal_proteins_text"
                    style="@style/Text"
                    android:text="@string/proteins" />

                <EditText
                    android:id="@+id/change_meal_proteins"
                    style="@style/Input_Number"
                    android:layout_width="100dp"

                    android:layout_marginTop="-10dp"
                    android:hint="@string/default_value"
                    android:autofillHints="" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/Linear_layout">

                <TextView
                    android:id="@+id/change_meal_carbons_text"
                    style="@style/Text"
                    android:text="@string/carbon" />

                <EditText
                    android:id="@+id/change_meal_carbons"
                    style="@style/Input_Number"
                    android:layout_width="100dp"

                    android:layout_marginTop="-10dp"
                    android:hint="@string/default_value"
                    android:autofillHints="" />

            </LinearLayout>

            <LinearLayout
                style="@style/Linear_layout"
                android:layout_marginStart="20dp">

                <TextView
                    android:id="@+id/change_meal_fats_text"
                    style="@style/Text"
                    android:text="@string/fat" />

                <EditText
                    android:id="@+id/change_meal_fats"
                    style="@style/Input_Number"
                    android:layout_width="100dp"

                    android:layout_marginTop="-10dp"
                    android:hint="@string/default_value"
                    android:autofillHints="" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="-5dp"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/Linear_layout">

                <TextView
                    android:id="@+id/change_meal_fluids_text"
                    style="@style/Text"
                    android:text="@string/fluids" />

                <EditText
                    android:id="@+id/change_meal_fluids"
                    style="@style/Input_Number"
                    android:layout_width="100dp"

                    android:layout_marginTop="-10dp"
                    android:hint="@string/default_value"
                    android:autofillHints="" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/change_meal_button"
        style="@style/Button"
        android:layout_marginTop="80dp"
        android:onClick="change"
        android:text="@string/change_meal_button_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>