<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:orientation="horizontal"
    android:background="@drawable/scrollview_element_states">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            style="@style/ScrollView_Element_Button"
            android:onClick="edit"
            android:text="@string/edit_button" />

        <Button
            style="@style/ScrollView_Element_Button"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:onClick="remove"
            android:text="@string/remove_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="256dp"
        android:layout_height="113dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:orientation="vertical">

        <TextView
            style="@style/Macros"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <TextView
            style="@style/Macros"
            android:layout_width="150dp"
            android:layout_marginTop="10dp" />

        <TextView
            style="@style/Macros"
            android:width="150dp"
            android:layout_marginTop="14dp" />

    </LinearLayout>

    <CheckBox
        style="@style/Macros"
        android:layout_marginTop="95dp"
        android:layout_marginStart="-100dp"
        android:layout_marginEnd="15dp"
        android:text="@string/active" />

    <CheckBox
        style="@style/Macros"
        android:layout_marginTop="60dp"
        android:layout_marginStart="-105dp"
        android:layout_marginEnd="15dp"
        android:text="@string/repeat" />

</LinearLayout>