<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context=".layout.EditUserActivity">

    <LinearLayout
        style="@style/Linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/edit_user_text"
            style="@style/Title"
            android:layout_marginTop="80dp"
            android:text="@string/edit_user_name" />

        <Button
            android:id="@+id/show_history_button"
            style="@style/Button"
            android:layout_marginTop="130dp"
            android:onClick="editPassword"
            android:text="@string/edit_user_password_button" />

        <Button
            android:id="@+id/edit_password_button"
            style="@style/Button"
            android:layout_marginTop="30dp"
            android:onClick="deleteAccount"
            android:text="@string/edit_user_delete_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>