<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditMealsActivity">

    <LinearLayout
        android:id="@+id/edit_meal_main_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/ScrollView_Panel">

        <Button
            android:id="@+id/edit_meal_remove"
            style="@style/ScrollView_Button"
            android:onClick="remove"
            android:text="@string/remove_button" />

        <EditText
            android:id="@+id/edit_meal_search"
            style="@style/ScrollView_Input_Text"
            android:layout_width="200dp"
            android:hint="@string/search" />

        <Button
            android:id="@+id/edit_meals_add"
            style="@style/ScrollView_Button"
            android:onClick="add"
            android:text="@string/add_button" />

    </LinearLayout>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@+id/edit_meal_main_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/ScrollView">

        <LinearLayout
            android:id="@+id/edit_meal_layout"
            style="@style/ScrollView_Linear_layout" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>