<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/app_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"

            android:text="@string/app_name"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textAlignment="center" />

        <Button
            android:id="@+id/menu_add_meal_button"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/menu_button_states"
            android:onClick="addMeal"

            android:text="@string/menu_add_meal_button"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/menu_statistics_button"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/menu_button_states"
            android:onClick="showStatistics"

            android:text="@string/menu_statistics_button"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/menu_options_button"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/menu_button_states"
            android:onClick="openOptions"

            android:text="@string/menu_options_button"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/menu_quit_buton"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/menu_button_states"
            android:onClick="quitApplication"

            android:text="@string/menu_quit_button"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>